my tabs fix tables for mobile by adding white space normal

--- a/app/styles/_lessonsIndex.scss
+++ b/app/styles/_lessonsIndex.scss
@@ -33,16 +33,19 @@
     }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1023px) {
     #lessonsIndex {
         .create {
             padding: 0 15px;
+        }
+        .name {
+            white-space: normal;
         }
     }
 
 }
 
-@media  screen and (max-width : 1024px) {
+@media  screen and (max-width : 1023px) {
     .padding-1 {
         padding-bottom: 22px;
     }
